--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,110 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+
+
+.font-inter {
+  font-family: var(--font-inter), sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+h6 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 14px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+h5 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  letter-spacing: -0.02px;
+  font-size: 15px;
+}
+h4 {
+  font-family: var(--font-inter), sans-serif;
+  letter-spacing : -1px;
+  font-weight: 300;
+  font-size: 22px;
+}
+h1 {
+  font-family: var(--font-inter), sans-serif;
+  letter-spacing : -0.5px;
+  font-weight: 200;
+  color : white;
+  font-size: 26px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+p {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 2ch;
+color : #a9a9a9
+}
+
+label {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  letter-spacing : -0.5px;
+  height : fit-content; 
+  border-radius : 2px;
+}
+button{
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 400;
+
+  letter-spacing : -0.5px;
+
+
+}
+input{
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 200;
+  font-size: 14px;
+  padding: 3px 7px;
+  background-color:  #363636;
+  color: '#dadada';
+
+}
+
+@media  (min-width : 1024px){
+/* Or apply directly to element selectors */
+p {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 2ch;
+color : #a9a9a9
+}
+h6 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+}
+h5 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  letter-spacing: -0.02px;
+  font-size: 17px;
+}
+
+h4 {
+  font-family: var(--font-inter), sans-serif;
+  letter-spacing : -1px;
+  font-weight: 300;
+  font-size: 22px;
+}
+
+
+input{
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 200;
+  font-size: 14px;
+  padding: 3px 7px;
+  background-color:  #363636;
+  color: '#dadada';
+
+}
+
+
 }
