integreted login feature

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,11 @@ h5 {
   letter-spacing: -0.02px;
   font-size: 15px;
 }
+a {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+}
 h4 {
   font-family: var(--font-inter), sans-serif;
   letter-spacing : -1px;
