--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,13 @@ p {
   line-height: 2ch;
 color : #a9a9a9
 }
+h3 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 2ch;
+
+}
 
 label {
   font-family: var(--font-inter), sans-serif;
@@ -91,6 +98,13 @@ h5 {
   font-weight: 300;
   letter-spacing: -0.02px;
   font-size: 17px;
+}
+h3 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 2ch;
+
 }
 
 h4 {
