--- a/app/globals.css
+++ b/app/globals.css
@@ -49,10 +49,20 @@ color : #a9a9a9
 h3 {
   font-family: var(--font-inter), sans-serif;
   font-weight: 300;
-  font-size: 11px;
+  font-size: 14px;
   line-height: 2ch;
 
 }
+
+h2 {
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 200;
+  font-size: 13px;
+  opacity: 0.66;
+  line-height: 2ch;
+
+}
+
 
 label {
   font-family: var(--font-inter), sans-serif;
