--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
 h6 {
   font-family: var(--font-inter), sans-serif;
   font-weight: 300;
+    letter-spacing: 0.3px;
   font-size: 14px;
 }
 
@@ -83,6 +84,7 @@ input{
   font-family: var(--font-inter), sans-serif;
   font-weight: 200;
   font-size: 14px;
+ letter-spacing: 0.4px;
 
   color: '#dadada';
 
@@ -93,6 +95,7 @@ textarea{
   font-weight: 200;
   font-size: 14px;
   padding: 3px 10px;
+  letter-spacing: 0.4px;
   color: '#dadada';
   background-color:  #101010;
 }
