--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,33 @@
 
 
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  input[type='range'] {
+    overflow: hidden;
+  
+    -webkit-appearance: none;
+    background-color: #e0e0e0; /* background color of track's unfilled part */
+  }
+
+  input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    -webkit-appearance: none;
+    background: #ffffff; /* unfilled color */
+  }
+
+input[type='range']::-webkit-slider-thumb {
+  width: 14px;
+  height: 20px;
+  transform: translate(3 , -1);
+  z-index: 10;
+  -webkit-appearance: none;
+  cursor: ew-resize;
+  background: rgb(0, 0, 0); /* thumb color */
+  ; /* makes the ball visible */
+  border-radius: 100%;
+  box-shadow: -200px 0 0 200px black; /* filled color */
+}
+}
 
 
 .font-inter {
