--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,13 @@ input[type='range']::-webkit-slider-thumb {
   box-shadow: -200px 0 0 200px black; /* filled color */
 }
 }
-
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 .progressive-blur {
   backdrop-filter: blur(100px);
   -webkit-backdrop-filter: blur(100px);
