--- a/app/globals.css
+++ b/app/globals.css
@@ -54,13 +54,14 @@ html{
 h6 {
   font-family: var(--font-inter), sans-serif;
   font-weight: 300;
+  line-height: 1.3;
     letter-spacing: 0.3px;
   font-size: 14px;
 }
 
 h5 {
   font-family: var(--font-inter), sans-serif;
-  font-weight: 300;
+  font-weight: 200;
   letter-spacing: -0.02px;
   font-size: 16px;
 }
@@ -137,6 +138,7 @@ textarea{
   letter-spacing: 0.4px;
   color: '#dadada';
   background-color:  #101010;
+    resize: none;
 }
 
 
@@ -156,7 +158,7 @@ h6 {
 }
 h5 {
   font-family: var(--font-inter), sans-serif;
-  font-weight: 300;
+  font-weight: 200;
   letter-spacing: -0.02px;
   font-size: 17px;
 }
