--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ h6 {
   font-weight: 300;
   line-height: 1.3;
     letter-spacing: 0.3px;
-  font-size: 14px;
+  font-size: 13.5px;
 }
 
 h5 {
@@ -145,14 +145,14 @@ textarea{
 
 @media  (min-width : 1024px){
 /* Or apply directly to element selectors */
-p {
+/* p {
   font-family: var(--font-inter), sans-serif;
   font-weight: 300;
   font-size: 14px;
   line-height: 2ch;
 color : #a9a9a9
-}
-h6 {
+} */
+/* h6 {
   font-family: var(--font-inter), sans-serif;
   font-weight: 300;
   font-size: 15px;
@@ -170,7 +170,7 @@ h3 {
   line-height: 2ch;
 
 }
-
+ */
 
 
 
