--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --bg-primary: #0d0d0d;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, input, textarea {
+h1, h2, h3, h4, h5, h6, p, a, input,button, textarea {
   color: var(--text-primary);
 }
 p {
@@ -88,15 +88,15 @@ html{
 
 h6 {
   font-family: var(--font-inter), sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.3;
-    letter-spacing: 0.3px;
+   
   font-size: 14px;
 }
 
 h5 {
   font-family: var(--font-inter), sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   letter-spacing: -0.02px;
   font-size: 16px;
 }
@@ -108,7 +108,7 @@ a {
 h4 {
   font-family: var(--font-inter), sans-serif;
  letter-spacing:  0px;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 19px;
 }
 h1 {
